# rust-workspace

./: .gitignore  Cargo.toml
build-web-environment-master/: .env  Cargo.toml
build-web-environment-master/src/: main.rs
cal-adder/: Cargo.toml
cal-adder/src/: main.rs
cal-lib/: Cargo.toml
cal-lib/src/: lib.rs
customer-err-lib/: Cargo.toml
customer-err-lib/src/: lib.rs
dioxus-demo/: .gitignore  Cargo.toml  README.md  todos_doixus.json
dioxus-demo/src/: lib.rs  main.rs  models.rs
dioxus-demo/src/components/: mod.rs  properties.rs  todo_filter.rs  todo_input.rs  todo_item.rs
dioxus-demo/src/platform/: desktop.rs  mod.rs  web.rs
fltk-demo/: Cargo.toml
fltk-demo/src/: main.rs
http/src/: httprequest.rs  httpresponse.rs  lib.rs
httpserver/: Cargo.toml
httpserver/data/: orders.json
httpserver/public/: 404.html  health.html  index.html
httpserver/src/: handler.rs  main.rs  router.rs  server.rs
main-action/: Cargo.toml
main-action/src/: calculate.rs1  lib.rs  main.rs
mock-demo/: Cargo.toml
mock-demo/src/: main.rs
module-split/: Cargo.toml
module-split/src/: main.rs
module-split/src/calculate/: commons.rs
sqlx-mysql-demo/: .env  Cargo.toml  README.md
sqlx-mysql-demo/src/: main copy.rs  main.rs
tokio-demo/: Cargo.toml
tokio-demo/src/: main.rs
wasm-actix-demo/: .env  Cargo.toml  README.md
wasm-actix-demo/src/: db_access.rs  error.rs  handlers.rs  models.rs  routers.rs  state.rs
wasm-actix-demo/src/dbaccess/: course.rs
wasm-actix-demo/src/handlers/: course.rs  health.rs  mod.rs
wasm-actix-demo/src/models/: course.rs
wasm-demo/: Cargo.toml  index.html
wasm-demo/src/: lib.rs
wasm-game-of-life/: Cargo.toml  LICENSE_MIT  before.txt
wasm-game-of-life/src/: lib.rs
wasm-game-of-life/tests/: web.rs
wasm-tcp-client/: Cargo.toml
wasm-tcp-client/src/: main.rs
wasm-tcp-server/: Cargo.toml
wasm-tcp-server/src/: main.rs
