[package]
name = "hello-world"
version = "0.1.0"
authors = ["孔祥旭 <d90159@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
sqlx = { version = "0.4.2", features = ["runtime-actix-native-tls", "mysql"] }
dotenv = "0.15.0"
anyhow = "1.0"