[package]
name = "dioxus-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1"
dioxus = { version = "0.2.3", features = ["web"] }
tracing = "0.1"
tracing-wasm = "0.2"
wasm-bindgen = "0.2.79"
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1"}
web-sys = {version = "0.3", features = ["Storage", "Location"]}
