[package]
name = "sqlx-mysql-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# anyhow = "1.0"
async-std = { version = "1.10.0", features = [ "attributes" ] }
# futures = "0.3.5"
paw = "1.0"

# features ['runtime-actix-native-tls', 'runtime-async-std-native-tls', 'runtime-tokio-native-tls', 'runtime-actix-rustls', 'runtime-async-std-rustls', 'runtime-tokio-rustls']
# sqlx = { version = "0.4.2", features = [ "mysql", "runtime-tokio-rustls", "chrono" ] }
sqlx = { version = "0.4.2", features = [ "mysql", 'runtime-async-std-rustls', "chrono" ] }
structopt = { version = "0.3", features = [ "paw" ] }
# dotenv = "0.15.0"

# tokio = {version = "0.2.25", features = ["full"] }
